# nlp-symbolic-solution

./: .gitignore  README.md  main_analysis.py  requirements.txt
symbolic/: pyproject.toml
symbolic/data/: LIWC2015_pt2-sem-pulo-linhas.dic  all_comments.csv  movie_recommendation.csv  movie_reviews_with_language.csv  wrong_movies.txt
symbolic/datasets/: movie_reviews_with_language.csv
symbolic/dictionary/: LIWC2015_pt2-sem-pulo-linhas.dic
symbolic/src/: analysis_notebook.ipynb  main_analysis.py  main_make_database.py  main_sentiment.py
symbolic/src/custom_types/: dictionary.py  strategy.py
symbolic/src/helpers/: read_dict.py  similarity.py
symbolic/src/preprocessing/: cleaner.py  stemming.py  tokenize_text.py
symbolic/src/scraping/: crawler.py
symbolic/src/sentiment/: analyzer.py  context_rules.py  structural_rules.py  word_level.py
symbolic/src/symbolic/: analysis_notebook.ipynb  main.py  main_analysis.py  main_make_database.py  main_sentiment.py  main_site.py
symbolic/src/symbolic/helpers/: dict_data.py  flatten.py  read_dict.py
symbolic/src/symbolic/notebooks/: exploring.ipynb
symbolic/src/symbolic/preprocessing/: __init__.py  cleaner.py  remove_stop_words.py  stemming.py  stop_words.py  tokenize_text.py
symbolic/src/symbolic/scraping/: crawler.py
symbolic/src/symbolic/scrapping/: web_crawler_letterboxd.py
symbolic/src/symbolic/sentiment/: analyzer.py  evaluation.py  sentiment.py  structural_rules.py  visualization.py  (+1 more)
symbolic/src/transformers/: bert_fine-final.ipynb
symbolic/src/utils/: dictionary.py  evaluation.py  visualization.py
(+11 files in other folders)
