[project]
name = "symbolic"
version = "0.1.0"
description = "Coding a NLP system using the symbolic paradigm, a lexical guided solution"
authors = [
    {name = "João Victor Carvalho",email = "joaocarvoli@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "symbolic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
