[project]
name = "symbolic"
version = "0.1.0"
description = "Coding a NLP system using the symbolic paradigm, a lexical guided solution"
authors = [
    {name = "João Victor Carvalho",email = "joaocarvoli@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "langdetect (>=1.0.9,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "symbolic", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
